--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 
 <body>
 <!-- HEADER -->
-<div id="header_wrap" class="outer">
+<div id="header_wrap" class="outer" style="max-height: 120px">
     <header class="inner">
         <a id="forkme_banner" href="https://github.com/dkandalov/delta-flora-for-intellij">View on GitHub</a>
         <h1 id="project_title">Delta-flora for IntelliJ</h1>
